-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.14.0 RC1
-
-
c33916a279ef5908e1ebd44644c873933f6a7c77 (qt/qtbase/5.14.0)
Continuous Integration: Failed
The test execution failed ('C:/Users/qt/work/qt/qtdeclarative/tests/auto/qml/debugger/qdebugmessageservice'). The CI rejected the staged commits due to the beforementioned reason. Possible reason could be a bug in one of the commits or some more recent change. Please investigate it.
The error was in "qt/qtdeclarative", revision: b3de744dba87fd8d5c2bdb9ed4c56a3e5455188b
agent:2019/11/27 09:42:03 build.go:751:
agent:2019/11/27 09:42:03 build.go:484: Executing instruction 83 of 488 - RunQtUnitTest
agent:2019/11/27 09:42:03 build.go:600: Running tests in directory C:/Users/qt/work/qt/qtdeclarative/tests/auto/qml/debugger/qdebugmessageservice
agent:2019/11/27 09:42:03 runner.go:72: Generating test results with TESTARGS=-o C:\Users\qt\work\testresults\tests\auto\qml\debugger\qdebugmessageservice793396266,xml -o -,txt
agent:2019/11/27 09:42:03 build.go:329: [Mingw32-make check] 900 900
agent:2019/11/27 09:42:04 build.go:220: call C:\Users\qt\work\qt\qtdeclarative\tests\auto\qml\debugger\qdebugmessageservice\target_wrapper.bat tst_qdebugmessageservice.exe -o C:\Users\qt\work\testresults\tests\auto\qml\debugger\qdebugmessageservice793396266,xml -o -,txt
agent:2019/11/27 09:42:04 build.go:220: ********* Start testing of tst_QDebugMessageService *********
agent:2019/11/27 09:42:04 build.go:220: Config: Using QtTest library 5.14.0, Qt 5.14.0 (i386-little_endian-ilp32 shared (dynamic) release build; by GCC 7.3.0)
agent:2019/11/27 09:42:04 build.go:220: PASS : tst_QDebugMessageService::initTestCase()
agent:2019/11/27 09:42:04 build.go:220: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() An error occurred while waiting for debug process to become available:
agent:2019/11/27 09:42:04 build.go:220: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() Process crashed.
agent:2019/11/27 09:42:19 build.go:220: FAIL! : tst_QDebugMessageService::retrieveDebugOutput() '(m_client->logBuffer.size() >= 2)' returned FALSE. ()
agent:2019/11/27 09:42:19 build.go:220: tst_qdebugmessageservice.cpp(142) : failure location
agent:2019/11/27 09:42:19 build.go:220: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() Process State: "not running (crashed!)"
agent:2019/11/27 09:42:19 build.go:220: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() Application Output: "QML Debugger: Waiting for connection on port 13773...\r\nQQmlApplicationEngine failed to load component\r\nfile:///C:/Users/qt/work/qt/qtdeclarative/tests/auto/qml/debugger/qdebugmessageservice/data/test.qml:29 module \"QtQuick\" is not installed\r\n\r\n"
agent:2019/11/27 09:42:19 build.go:220: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() Connection State: "not connected"
agent:2019/11/27 09:42:19 build.go:220: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() "DebugMessages" State: "Not connected"
agent:2019/11/27 09:42:19 build.go:220: PASS : tst_QDebugMessageService::cleanupTestCase()
agent:2019/11/27 09:42:19 build.go:220: Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 15308ms
agent:2019/11/27 09:42:19 build.go:220: ********* Finished testing of tst_QDebugMessageService *********
agent:2019/11/27 09:42:19 build.go:220: Mingw32-make: *** [Makefile:325: check] Error 1
agent:2019/11/27 09:42:19 build.go:253: Process finished with error: exit status 2
agent:2019/11/27 09:42:19 build.go:223: Error reading from stdout/err: exit status 2
agent:2019/11/27 09:42:39 runner.go:156: Re-running tests/auto/qml/debugger/qdebugmessageservice with TESTARGS=retrieveDebugOutput
agent:2019/11/27 09:42:39 build.go:329: [Mingw32-make check] 900 900
agent:2019/11/27 09:42:40 build.go:220: call C:\Users\qt\work\qt\qtdeclarative\tests\auto\qml\debugger\qdebugmessageservice\target_wrapper.bat tst_qdebugmessageservice.exe retrieveDebugOutput -maxwarnings 0
agent:2019/11/27 09:42:40 build.go:220: [ 0.000 D] qt.qpa.windows unknown - setProcessDpiAwareness 2
agent:2019/11/27 09:42:40 build.go:220: [ 0.000 D] qt.qpa.windows unknown - QWindowsIntegrationPrivate DpiAwareness= 2 effective process DPI awareness= -1
agent:2019/11/27 09:42:40 build.go:220: [ 0.000 D] qt.qpa.windows unknown - registerWindowClass "QtPowerDummyWindow" style=0x0 brush=0x0 icon=false atom=49468
agent:2019/11/27 09:42:40 build.go:220: [ 0.003 D] qt.qpa.windows unknown - registerWindowClass "Qt5ClipboardView" style=0x0 brush=0x0 icon=false atom=49472
agent:2019/11/27 09:42:40 build.go:220: [ 0.003 D] qt.qpa.mime unknown - registerViewer m_clipboardViewer: 0x200144 format listener: true next: 0x0
agent:2019/11/27 09:42:40 build.go:220: [ 0.004 D] qt.qpa.windows unknown - New Monitor: Screen "\\.\DISPLAY1" 1280x800+0+0 avail: 1280x760+0+0 physical: 320x240 DPI: 96x96 Depth: 32 Format: QImage::Format_RGB32 hMonitor: 0x10001 primary virtual desktop
agent:2019/11/27 09:42:40 build.go:220: [ 0.006 D] qt.qpa.fonts unknown - systemDefaultFont QFont(MS Shell Dlg 2,8.25,-1,5,50,0,0,0,0,0)
agent:2019/11/27 09:42:40 build.go:220: [ 0.006 D] qt.qpa.windows unknown - refreshIconPixmapSizes (QSize(16, 16), QSize(32, 32))
agent:2019/11/27 09:42:40 build.go:220: ********* Start testing of tst_QDebugMessageService *********
agent:2019/11/27 09:42:40 build.go:220: Config: Using QtTest library 5.14.0, Qt 5.14.0 (i386-little_endian-ilp32 shared (dynamic) release build; by GCC 7.3.0)
agent:2019/11/27 09:42:40 build.go:220: PASS : tst_QDebugMessageService::initTestCase()
agent:2019/11/27 09:42:40 build.go:220: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() [ 0.144 D] default unknown - An error occurred while waiting for debug process to become available:
agent:2019/11/27 09:42:40 build.go:220: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() [ 0.144 D] default unknown - Process crashed.
agent:2019/11/27 09:42:40 build.go:220: FAIL! : tst_QDebugMessageService::retrieveDebugOutput() 'm_client->logBuffer.contains(entry1)' returned FALSE. ()
agent:2019/11/27 09:42:40 build.go:220: tst_qdebugmessageservice.cpp(157) : failure location
agent:2019/11/27 09:42:40 build.go:220: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() [ 0.155 D] default unknown - Process State: "not running (crashed!)"
agent:2019/11/27 09:42:40 build.go:220: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() [ 0.155 D] default unknown - Application Output: "[ 0.000 D] qt.qpa.windows unknown - setProcessDpiAwareness 2\r\n[ 0.000 D] qt.qpa.windows unknown - QWindowsIntegrationPrivate DpiAwareness= 2 effective process DPI awareness= -1\r\n[ 0.000 D] qt.qpa.windows unknown - registerWindowClass \"QtPowerDummyWindow\" style=0x0 brush=0x0 icon=false atom=49468\r\n[ 0.002 D] qt.qpa.windows unknown - registerWindowClass \"Qt5ClipboardView\" style=0x0 brush=0x0 icon=false atom=49472\r\n[ 0.002 D] qt.qpa.mime unknown - registerViewer m_clipboardViewer: 0x56014a format listener: true next: 0x0\r\n[ 0.002 D] qt.qpa.windows unknown - New Monitor: Screen \"\\\\.\\DISPLAY1\" 1280x800+0+0 avail: 1280x760+0+0 physical: 320x240 DPI: 96x96 Depth: 32 Format: QImage::Format_RGB32 hMonitor: 0x10001 primary virtual desktop\r\n[ 0.004 D] qt.qpa.fonts unknown - systemDefaultFont QFont(MS Shell Dlg 2,8.25,-1,5,50,0,0,0,0,0)\r\n[ 0.004 D] qt.qpa.windows unknown - refreshIconPixmapSizes (QSize(16, 16), QSize(32, 32))\r\n[ 0.051 D] default unknown - QML Debugger: Waiting for connection on port 13773...\r\n[ 0.063 D] qt.qml.gc.statistics unknown - Qml GC memory allocation statistics:\r\n[ 0.063 D] qt.qml.gc.statistics unknown - Total memory allocated: 0\r\n[ 0.063 D] qt.qml.gc.statistics unknown - Max memory used before a GC run: 0\r\n[ 0.063 D] qt.qml.gc.statistics unknown - Max memory used after a GC run: 0\r\n[ 0.063 D] qt.qml.gc.statistics unknown - Requests for different item sizes:\r\n[ 0.063 D] qt.qml.gc.statistics unknown - < 32 bytes: 866\r\n[ 0.063 D] qt.qml.gc.statistics unknown - < 64 bytes: 641\r\n[ 0.063 D] qt.qml.gc.statistics unknown - < 96 bytes: 1\r\n[ 0.064 D] qt.qml.gc.statistics unknown - < 128 bytes: 56\r\n[ 0.064 D] qt.qml.gc.statistics unknown - < 160 bytes: 0\r\n[ 0.064 D] qt.qml.gc.statistics unknown - < 192 bytes: 0\r\n[ 0.064 D] qt.qml.gc.statistics unknown - >= 224 bytes: 47\r\n[ 0.082 D] qt.qml.diskcache unknown - Error loading \"file:///C:/Users/qt/work/qt/qtdeclarative/tests/auto/qml/debugger/qdebugmessageservice/data/test.qml\" from disk cache: \"The system cannot find the file specified.\"\r\n[ 0.083 W] default unknown - QQmlApplicationEngine failed to load component\r\n[ 0.083 W] default unknown - file:///C:/Users/qt/work/qt/qtdeclarative/tests/auto/qml/debugger/qdebugmessageservice/data/test.qml:29 module \"QtQuick\" is not installed\r\n\r\n"
agent:2019/11/27 09:42:40 build.go:220: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() [ 0.155 D] default unknown - Connection State: "not connected"
agent:2019/11/27 09:42:40 build.go:220: QDEBUG : tst_QDebugMessageService::retrieveDebugOutput() [ 0.155 D] default unknown - "DebugMessages" State: "Not connected"
agent:2019/11/27 09:42:40 build.go:220: PASS : tst_QDebugMessageService::cleanupTestCase()
agent:2019/11/27 09:42:40 build.go:220: Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 149ms
agent:2019/11/27 09:42:40 build.go:220: ********* Finished testing of tst_QDebugMessageService *********
agent:2019/11/27 09:42:40 build.go:220: Mingw32-make: *** [Makefile:325: check] Error 1
agent:2019/11/27 09:42:40 build.go:253: Process finished with error: exit status 2
agent:2019/11/27 09:42:40 build.go:223: Error reading from stdout/err: exit status 2
agent:2019/11/27 09:42:40 build.go:471: Executing scheduled instruction 1 of 2 - Upload all core dumps if there are some
agent:2019/11/27 09:42:40 build.go:384: Skip uploading core files because CORE_FILES_PATH is not set in the environment
agent:2019/11/27 09:42:40 build.go:473:
agent:2019/11/27 09:42:40 build.go:471: Executing scheduled instruction 2 of 2 - Upload test results
agent:2019/11/27 09:42:40 storageclient.go:451: Collecting test results, archiving and uploading them
agent:2019/11/27 09:42:40 result.go:177: Collecting 30 test results ...
agent:2019/11/27 09:42:40 build.go:473:
agent:2019/11/27 09:42:40 agent.go:272: Test failed
agent:2019/11/27 09:42:40 agent.go:200: ERROR building: exit status 2
INFO:workitem.py:612(6936): Agent FINISHED FAIL: testing C:/Users/qt/work/qt/qtdeclarative/tests/auto/qml/debugger/qdebugmessageservice: qt/qtdeclarative/7ef6f858219f52442f92dd112c2441b3c14406d0/WindowsWindows_7x86WindowsWindows_7x86Mingw73qtci-windows-7-x86-3-35e70b/37fa7c0ba0393e42f060f0dfc9ee905ea25885e2/Test
Build log: https://testresults.qt.io/logs/qt/qtdeclarative/7ef6f858219f52442f92dd112c2441b3c14406d0/WindowsWindows_7x86WindowsWindows_7x86Mingw73qtci-windows-7-x86-3-35e70b/37fa7c0ba0393e42f060f0dfc9ee905ea25885e2/test_1574846161/log.txt.gz
Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1574846000
Tested changes (refs/builds/qtci/5.14.0/1574846000):
https://codereview.qt-project.org/c/qt/qt5/+/282651 Update submodules on '5.14.0' in qt5
| For Gerrit Dashboard: QTBUG-80366 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 283024,2 | Fix prefix determination for windeployqt'ed MinGW applications | 5.14.0 | qt/qtbase | Status: MERGED | +2 | 0 |