Fix prefix determination for windeployqt'ed MinGW applications

We hard-coded the assumption the import lib naming scheme is always
basename + ".lib" which is wrong for MinGW.

This amends commit a131d610.

Fixes: QTBUG-80366
Change-Id: Ibefb8a54483cc62743b8783530644b03e720262c
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>