src/corelib/global/qlibraryinfo.cpp
@@ -574,11 +574,19 @@ static QString getRelocatablePrefix()
         const QString libdir = QString::fromLatin1(
             qt_configure_strs + qt_configure_str_offsets[QLibraryInfo::LibrariesPath - 1]);
         const QLatin1Char slash('/');
-        const QString qtCoreImpLibPath
-                = qtCoreDirPath
+#if defined(Q_CC_MINGW)
+        const QString implibPrefix = QStringLiteral("lib");
+        const QString implibSuffix = QStringLiteral(".a");
+#else
+        const QString implibPrefix;
+        const QString implibSuffix = QStringLiteral(".lib");
+#endif
+        const QString qtCoreImpLibFileName = implibPrefix
+                + QFileInfo(qtCoreFilePath).completeBaseName() + implibSuffix;
+        const QString qtCoreImpLibPath = qtCoreDirPath
                 + slash + QLatin1String(QT_CONFIGURE_LIBLOCATION_TO_PREFIX_PATH)
                 + slash + libdir
-                + slash + QFileInfo(qtCoreFilePath).completeBaseName() + QLatin1String(".lib");
+                + slash + qtCoreImpLibFileName;
         if (!QFileInfo::exists(qtCoreImpLibPath)) {
             // We did not find a corresponding import library and conclude that this is a
             // windeployqt'ed executable.
